# telegram_pb

./: .dockerignore  .env.backup  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEVOPS_GUIDE.md  Dockerfile  FINAL_STATUS.md  FINAL_TESTING_GUIDE.md  FIXED_BOT_GUIDE.md  JIRA_INTEGRATION.md  LICENSE  Makefile  QUICK_DEPLOY.md  QUICK_TEST.md  README.md  SECURITY_SETUP.md  SETUP.md  STATUS.md  STORY_POINTS_SETUP.md  TESTING_GUIDE.md  WORKING_BOT_GUIDE.md  bot.py  bot_with_logs.py  check_and_start.py  config.example.py  config.py  config_parser.py  docker-compose.offline.yml  docker-compose.prod.yml  docker-compose.yml  env.example  handlers.py  jira_service.py  models.py  mypy.ini  (+15 more)
app/: main.py  providers.py
backend/: config.py  requirements.txt  session_store.py
core/: __init__.py  bootstrap.py  config_manager.py  container.py  error_handler.py  exceptions.py  factories.py  file_locks.py  input_validator.py  interfaces.py  metrics.py  types.py  validation.py  validators.py
data/: .gitkeep  group_configs.json  group_configs.json.example  sessions.json  sessions.json.example  state.json  tokens.json.example  user_roles.json.example
docs/: FIXES_PLAN.md  GRAFANA.md  GRAFANA_ALERTING.md  GRAFANA_IMPORT_MANUAL.md  GRAFANA_PROVISIONING.md  GRAFANA_SETUP.md  MICROSERVICES.md  MICROSERVICES_SETUP.md  MIGRATION_TO_MICROSERVICES.md  PRODUCT.md  ROADMAP.md  TECHNICAL.md  TEST_CASES_ANALYSIS.md  grafana-dashboard-telegram-pb.json
domain/: __init__.py  entities.py  enums.py  value_objects.py
examples/: refactored_bot_example.py
handlers/: __init__.py  admin_handlers.py  base_handlers.py  menu_handlers.py  role_handlers.py  session_handlers.py  voting_handlers.py
handlers_modules/: session_control_handlers.py
k8s/: gateway.yaml  jira-service.yaml  postgres.yaml  redis.yaml
repositories/: __init__.py  group_config_repository.py  session_repository.py  token_repository.py
scripts/: backup_data.py  check_config.py  deploy.sh  find_story_points_field.py  generate_favicons.py  github_deploy.sh  load_test_voting.py  quick_update.sh  setup_server.sh  update.sh
services/: __init__.py  file_parser_service.py  group_config_service.py  jira_update_service.py  message_service.py  role_service.py  session_control_service.py  session_service.py  timer_service.py
tests/: __init__.py  test_adult_robustness.py  test_ai_jobs.py  test_ai_summary_jira_export.py  test_ai_summary_prompt.py  test_close_session.py  test_cms_rbac.py  test_cms_scope_fetch.py  test_cms_team_scope.py  test_confluence_context.py  test_core.py  test_domain.py  test_estimation.py  test_gitlab_http.py  test_gitlab_role_evidence.py  test_gitlab_scope_coverage.py  test_handlers_reset_queue.py  test_integration.py  test_integration_e2e.py  test_jira_changelog.py  test_jira_html.py  test_jira_role_contributors.py  test_jira_scope_search.py  test_jira_service_scope_response.py  test_jira_skip_errors.py  test_keyboards.py  test_models.py  test_participant_identity.py  test_rate_limit.py  test_release_scope_context.py  test_retro_ai_prompt.py  test_retro_api.py  test_retro_domain.py  test_review_hardening.py  test_scope_ai_prompt.py  test_scope_board.py  test_scope_layout.py  test_services.py  test_session_control.py  (+9 more)
(+388 files in other folders)
